# multitask_unit_and_days

./: .gitignore  README.md  __init__.py  pyproject.toml
code/: __init__.py
multitask_unit_and_days/: __init__.py  main.py  plot_functions_from_model_predictions.py  run_experiments.py
src/multitask_unit_and_days/: DataManager.py  main.py
