[tool.poetry]
name = "multitask_unit_and_days"
version = "0.1.0"
description = "Multitask Unit and Days"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    {include = "*", from = "code"},
]

[tool.poetry.dependencies]
python = "^3"
tensorflow = "^2.17.0"
numpy = "^1.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
keras = "^3.5.0"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
