[tool.poetry]
name = "multitask_unit_and_days"
version = "0.1.0"
description = "Multitask Unit and Days"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "multitask_unit_and_days"},
]



[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.17.0"
numpy = "^1.0.1"
pandas = "^2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
keras = "^3.5"
scikit-learn = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
